# src/Cifra.Api/V1/ClassController.cs
@@ -101,18 +101,18 @@ namespace Cifra.Api.V1
         }
 
         /// <summary>
-        /// Adds an student to a class.
+        /// Adds an students to a class.
         /// </summary>
-        /// <param name="classId">The class id where the student should be added.</param>
-        /// <param name="request">The request containing details of the student.</param>
+        /// <param name="classId">The class id where the students should be added.</param>
+        /// <param name="request">The request containing details of the students.</param>
         /// <returns>Reference to newly created student</returns>
         /// <response code="201">Reference to newly created student.</response> 
         /// <response code="400">Supplied student data was invalid.</response> 
         /// <response code="500">The student could not be created.</response> 
         [HttpPost]
         [Route("{classId}/Student")]
-        [ProducesResponseType(typeof(AddStudentResponse), StatusCodes.Status201Created)]
-        [ProducesResponseType(typeof(AddStudentResponse), StatusCodes.Status400BadRequest)]
+        [ProducesResponseType(typeof(AddStudentsResponse), StatusCodes.Status201Created)]
+        [ProducesResponseType(typeof(AddStudentsResponse), StatusCodes.Status400BadRequest)]
         [ProducesResponseType(StatusCodes.Status500InternalServerError)]
         public async Task<ActionResult> AddStudentsAsync(int classId, AddStudentsRequest request)
         {
@@ -129,7 +129,7 @@ namespace Cifra.Api.V1
 
                 AddStudentResult result = await _classService.AddStudentAsync(command);
 
-                var response = _mapper.Map<AddStudentResponse>(result);
+                var response = _mapper.Map<AddStudentsResponse>(result);
 
                 if (response.ValidationMessages.Any())
                 {
@@ -138,7 +138,7 @@ namespace Cifra.Api.V1
                 }
             }
             
-            return Created(new Uri($"", UriKind.Relative), validationMessages);
+            return Created(new Uri($"", UriKind.Relative), new AddStudentsResponse { ValidationMessages = validationMessages});
         }
     }
 }
